@@ -31,6 +31,7 @@ class I2c : public II2c
 {
 public:
     I2c( uint16_t bus_num );
+    I2c( const char *device );
     ~I2c();
 
     void    init( uint32_t clock );
@@ -51,5 +52,9 @@ public:
                       uint8_t *buffer,
                       uint16_t size );
     uint8_t read_reg( uint8_t slave_address, uint8_t register_address );
+
+private:
+    char m_device[30];
+    int  m_fd;
 };
 }    // namespace lot
