@@ -1,6 +1,7 @@
 lot-odroid-n2 (0.5.0) unstable; urgency=medium
 
   * API: Implement I2C source for Linux
+  * Use I2c_linux.cpp for odroid-n2
 
  -- Hyeonki Hong <hhk7734@gmail.com>  Tue, 22 Oct 2019 23:49:38 +0900
 
